# RAG-SQL

./: .gitignore  README.md  create_database.py  frontend.py  hybrid.py  main.py  pyproject.toml  requirements.txt  router.py  test.py
history/: query_history.json
rag/: ingest.py  retriever.py
uploads/: business_rules.txt
vector_store/: index.faiss  index.pkl
