[project]
name = "RAG"
version = "0.1.0"
description = "AI Text-to-SQL and RAG Assistant"
requires-python = ">=3.11,<3.13"

dependencies = [
    "faiss-cpu",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "pypdf",
    "tiktoken",
    "streamlit",
    "pandas",
    "sqlalchemy",
    "python-dotenv",
    "openai",
]