[project]
name = "text-to-sql"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

dependencies = [
    "streamlit",
    "openai",
    "python-dotenv",
    "faiss-cpu",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "pypdf",
    "tiktoken",
    "pandas",
    "sqlalchemy",
    "numpy",
    "requests"
]

[tool.uv]
package = false